--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,27 @@
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
-    box-sizing: border-box;
 }
 
 body {
     background-color: rgb(22, 8, 36);
     color: white;
     font-family: "Poppins", sans-serif;
+
 }
 
 .left {
     font-size: 1.9rem;
-    margin: 17px 30px;
+   margin: 17px 30px;
 }
 
 .right {
-    margin: 30px 0;
+    margin: 30px 0px;
 }
 
-nav {
+nav{
     height: 70px;
+    width: 100%;
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -31,8 +32,8 @@ nav {
     top: 0;
     left: 0;
     z-index: 1000;
-}
 
+}
 nav ul {
     justify-content: center;
     display: flex;
@@ -42,25 +43,20 @@ nav ul li {
     margin: 0 12px;
     list-style: none;
 }
-
-nav ul li a {
+nav ul li a{
     text-decoration: none;
     color: white;
-    transition: font-size 0.3s ease;
 }
-
-nav ul li a:hover {
+nav ul li a:hover{
     text-decoration: none;
     color: white;
     font-size: 1.1rem;
 }
-
 .section1 {
     display: flex;
     justify-content: space-around;
     margin: 30px;
 }
-
 .leftsec {
     margin: 150px;
     width: 30%;
@@ -78,12 +74,14 @@ nav ul li a:hover {
 }
 
 .leftsec2 img {
+
     margin: 70px;
     height: 200px;
     width: 200px;
 }
 
 .rightsec img {
+
     margin: 70px;
     height: 350px;
     width: 400px;
@@ -98,7 +96,7 @@ nav ul li a:hover {
 }
 
 .section2 {
-    margin: 0 80px;
+    margin: 0px 80px;
     display: flex;
     justify-content: space-around;
 }
@@ -113,13 +111,13 @@ div h1 {
 
 footer {
     background: rgb(21, 16, 25);
+
 }
 
 .footer {
     display: flex;
     justify-content: left;
     margin-top: 40px;
-    flex-wrap: wrap;
 }
 
 .footer-first {
@@ -130,6 +128,7 @@ footer {
 .details {
     margin: 25px;
     justify-content: space-evenly;
+
 }
 
 .email {
@@ -149,11 +148,15 @@ footer {
 .section3 {
     margin: 120px 80px;
     display: flex;
+
 }
+
+
 
 .skills ul {
     display: flex;
     margin: 20px 30px;
+
 }
 
 .skills ul li {
@@ -176,8 +179,10 @@ footer {
 }
 
 .section4 {
+
     display: flex;
     justify-content: space-around;
+
 }
 
 .leftsec3 {
@@ -229,25 +234,22 @@ footer {
     border-radius: 8px;
     border-color: white;
 }
-
-.row1 {
+.row1{
     margin: 100px 200px;
 }
-
-.certi {
+.certi{
     list-style: none;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-evenly;;
 }
-
 .certi li button {
     position: relative;
     border: none;
     outline: none;
-    overflow: hidden;
+    overflow: none;
+    float: none;
 }
-
-.certi li button .overlay {
+.certi li button .overlay{
     position: absolute;
     top: 0;
     bottom: 0;
@@ -256,7 +258,7 @@ footer {
     height: 100%;
     width: 100%;
     opacity: 0;
-    transition: 0.5s ease;
+    transition: .5s ease;
     background-color: rgba(66, 59, 59, 0.5);
     color: white;
     display: flex;
@@ -264,38 +266,14 @@ footer {
     align-items: center;
     font-size: 20px;
 }
-
-.certi li button img {
+.certi li button img{
     height: 300px;
     width: 300px;
-}
 
-.certi button:hover .overlay {
+}
+.certi button:hover .overlay{
     opacity: 1;
 }
-
-.certi .overlay p:hover {
+.certi .overlay p:hover{
     font-size: 1.5rem;
-}
-
-@media (max-width: 768px) {
-    .section1, .section2, .section3, .section4 {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    .leftsec, .rightsec {
-        margin: 0;
-        width: 100%;
-    }
-    .skills ul {
-        flex-direction: column;
-    }
-    .skills ul li {
-        margin: 20px 0;
-    }
-    .leftsec3, .rightsec3 {
-        width: 100%;
-        margin: 0;
-    }
 }
